--- a/com/jesse/home.html
+++ b/com/jesse/home.html
@@ -7,11 +7,13 @@
     <script src="/static/jquery.js"></script>
 </head>
 <body>
-    <input type="button" onclick="fetchGoodStocks" value="获取好股票">
+    <input type="button" id="fetchBasicStock" onclick="fetchGoodStocks()" value="获取好股票">
 </body>
 <script>
-    function fetchGoodStocks(){
-
-    }
+$("#fetchBasicStock").click(function () {
+    $.get("fetchBasicStock", function (data) {
+        console.log(data)
+    })
+})
 </script>
 </html>
